--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-around align-items-cente">
                 <div class="mr-3">
-                    <img src="./imgs/icons/Academia.png" alt="">
+                    <img src="./imgs/icons/Academia.png" alt="icone de academia">
                 </div>
                 <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                     <h2 class="number-title mr-2">130</h2>
@@ -71,7 +71,7 @@
             </div>
             <div class="d-flex justify-content-around align-items-cente">
                 <div class="mr-3">
-                    <img src="./imgs/icons/clientes.png" alt="">
+                    <img src="./imgs/icons/clientes.png" alt="icone de clientes">
                 </div>
                 <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                     <h2 class="number-title mr-2">949</h2>
@@ -80,7 +80,7 @@
             </div>
             <div class="d-flex justify-content-around align-items-cente">
                 <div class="mr-3">
-                    <img src="./imgs/icons/model.png" alt="">
+                    <img src="./imgs/icons/model.png" alt="icone de 25 anos de academia">
                 </div>
                 <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                     <h2 class="number-title mr-2">25</h2>
@@ -89,7 +89,7 @@
             </div>
             <div class="d-flex justify-content-around align-items-cente">
                 <div class="mr-3">
-                    <img src="./imgs/icons/personais.png" alt="">
+                    <img src="./imgs/icons/personais.png" alt="icone de quantidade de personais">
                 </div>
                 <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                     <h2 class="number-title mr-2">320</h2>
