--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section class="numbers-animation-bg container-lg">
         <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center">
-            <div class="d-flex justify-content-around align-items-cente">
+            <div class="d-flex justify-content-around align-items-center">
                 <div class="mr-3">
                     <img src="./imgs/icons/Academia.png" alt="icone de academia">
                 </div>
@@ -69,7 +69,7 @@
                     <h2 class="title-type">Academias</h2>
                 </div>
             </div>
-            <div class="d-flex justify-content-around align-items-cente">
+            <div class="d-flex justify-content-around align-items-center">
                 <div class="mr-3">
                     <img src="./imgs/icons/clientes.png" alt="icone de clientes">
                 </div>
@@ -87,7 +87,7 @@
                     <h2 class="title-type">Anos mudando vidas</h2>
                 </div>
             </div>
-            <div class="d-flex justify-content-around align-items-cente">
+            <div class="d-flex justify-content-around align-items-center">
                 <div class="mr-3">
                     <img src="./imgs/icons/personais.png" alt="icone de quantidade de personais">
                 </div>
@@ -130,6 +130,79 @@
                     <h5><b>Ginastica</b></h5>
                 </div>
             </div>
+            <div class="structures-text container-lg d-flex flex-column mx-auto">
+                <h2 class="mx-auto"><b>CONHEÇA ALGUNS DOS NOSSOS PROFISSIONAIS</b></h2>
+                <p class="mx-auto mt-2">Transforme-se conosco! Profissionais apaixonados prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
+            </div>
+            <div class="structures container-lg ml-5 mr-5">
+                <div class="structures-container d-flex justify-content-center align-items-center">
+                    <div class="structures-card">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-1.jpg" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <p class="card-title">TREINADORA DE CROSSFIT</p>
+                            <h5 class="card-text">Jessica</h5>
+                        </div>
+                        <ul class="structures-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram"></i></li>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                        </ul>
+                        <div class="structures-effect"></div>
+                    </div>
+                    <div class="structures-card">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-2.jpg" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <p class="card-title">TREINADOR DE MUSCULAÇÃO</p>
+                            <h5 class="card-text">Ramon</h5>
+                        </div>
+                        <ul class="structures-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram mt-3 mb-3"></i></li>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                        </ul>
+                        <div class="structures-effect"></div>
+                    </div>
+                    <div class="structures-card">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-3.jpg" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <p class="card-title">TREINADORA DE MUSCULAÇÃO</p>
+                            <h5 class="card-text">Juliana</h5>
+                        </div>
+                        <ul class="structures-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram mt-3 mb-3"></i></li>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                        </ul>
+                        <div class="structures-effect"></div>
+                    </div>
+                    <div class="structures-card">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-4.jpg" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <p class="card-title">TREINADORA DE GINÁSTICA</p>
+                            <h5 class="card-text">Nayara</h5>
+                        </div>
+                        <ul class="structures-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram mt-3 mb-3"></i></li>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                        </ul>
+                        <div class="structures-effect"></div>
+                    </div>
+                    <div class="structures-card">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-5.jpg" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <p class="card-title">TREINADOR DE MUSCULAÇÃO</p>
+                            <h5 class="card-text">Robson</h5>
+                        </div>
+                        <ul class="structures-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram mt-3 mb-3"></i></li>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                        </ul>
+                        <div class="structures-effect"></div>
+                    </div>
+                </div>
+            </div>
             <div class="banner-g container-lg">
                 <div class="row">
                     <div class="container-banner-services col">
@@ -141,7 +214,6 @@
                 </div>
             </div>
         </div>
-
     </section>
     <section class="feedback">
 
@@ -221,7 +293,7 @@
                 </div>
             </div>
 
-            <div class="card-plans p-5" style="width: 370px; height: 550px;  background-image: url(./imgs/price-3.jpg); background-size: cover;">
+            <div class="card-plans p-5" style="width: 370px; height: 550px;  background-image: url(./imgs/price4.jpg); background-size: cover;">
                 <div class="container-plans">
                     <div>
                         <h4>Plano Final</h4>
@@ -288,7 +360,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <p>Nossas redes socias</p>
+                    <p>NOSSA REDES SOCIAIS</p>
                     <ul class="d-flex">
                         <li><i class="fab fa-twitter mr-4"></i></li>
                         <li><i class="fab fa-instagram m-0"></i></li>
