--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                         <li><a href="#services" class="nav-link">Serviços</a></li>
                         <li><a href="#plans" class="nav-link">Planos</a></li>
                         <li><a href="#contact" class="nav-link">Contato</a></li>
+                        <li><a href="#contact" class="nav-link">Blog</a></li>
                     </ul>
-                    <a class="btn btn-white btn-icon ml-5">
+                 <!--  <a class="btn btn-white btn-icon ml-5">
                         <span class="icon">
                             <i class="fa fa-shopping-bag"></i>
                         </span>
-                    </a>
+                    </a> --> 
                 </div>
             </nav>
         </div>
@@ -215,7 +216,39 @@
             </div>
         </div>
     </section>
-    <section class="feedback">
+    <section class="feedback-bg container-lg">
+        <div class="d-flex justify-content-center align-items-center mx-auto mb-5">
+            <h2>Lorem ipsum dolor sit amet <i class="far fa-comment ml-3"></i></h2>
+        </div>
+
+        <div class="container d-flex justify-content-center align-items-center">
+            <i class="fas fa-chevron-left"></i>
+                <div class="d-flex justify-content-center align-items-center mx-auto">
+                    <div class="mr-5">
+                            <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
+                    </div>
+                    <div>
+                        <div class="texto-depoimento">
+                            <i class="fas fa-quote-left"></i>
+                            <h2>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
+                            </h2>
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div>
+                            <p class="nome-depoimento"><b>PAULA PEREIRA</b></p>
+                            <p class="nota-depoimento">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>&nbsp; <span>4.5</span>
+                            </p>
+                        </div>
+                    </div> 
+                </div>
+            <i class="fas fa-chevron-right"></i>
+        </div>
 
     </section>
 
