Adição de novos arquivos e refaturando codigo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
                         <button type="button" class="btn btn-dark col-4 p-3">  
-                             Mais informações<i class="fab fa-whatsapp ml-2"></i>
+                             Enviar Mensagem<i class="fab fa-whatsapp ml-2"></i>
                         </button>
                         
                     </div>
@@ -101,13 +101,13 @@
     </section>
     <section id="services" class="services container-lg ">
         <div>
-            <div class="services-text container d-flex flex-column">
+            <div class="services-text d-flex flex-column mx-auto">
                 <h2><b>Descubra a Excelência</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-            <div class="container-services container d-flex">
+            <div class="container-services d-flex justify-content-center align-items-center">
                <div class="card">
-                    <img src="./imgs/musculacao1.jpg" alt="imagem de musculação">
+                    <img src="./imgs/musculacao3.jpg" alt="imagem de musculação">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
                         <p>Força</p>
@@ -115,7 +115,7 @@
                     <h5><b>Musculação</b></h5>
                 </div>
                 <div class="card">
-                    <img src="./imgs/funcional2.jpg" alt="imagem de funcional">
+                    <img src="./imgs/ginastica3.png" alt="imagem de funcional">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
                         <p>Resistência</p>
@@ -123,7 +123,7 @@
                     <h5><b>Funcional</b></h5>
                 </div>
                 <div class="card">
-                    <img src="./imgs/Ginastica.jpg" alt="imagem de persoal trainer">
+                    <img src="./imgs/funcional.png"  alt="imagem de persoal trainer">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
                         <p>Resistência</p>
@@ -218,47 +218,48 @@
     </section>
     <section class="feedback-bg container-lg">
         <div class="d-flex justify-content-center align-items-center mx-auto mb-5">
-            <h2>Lorem ipsum dolor sit amet <i class="far fa-comment ml-3"></i></h2>
+            <h2>A Opinião dos Campeões: Feedback Direto dos Nossos Alunos sobre a Experiência na Academia! <i class="far fa-comment ml-1"></i></h2>
         </div>
 
-        <div class="container d-flex justify-content-center align-items-center">
-            <i class="fas fa-chevron-left"></i>
+        <div class="container">
                 <div class="d-flex justify-content-center align-items-center mx-auto">
-                    <div class="mr-5">
-                            <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
-                    </div>
-                    <div>
-                        <div class="texto-depoimento">
-                            <i class="fas fa-quote-left"></i>
-                            <h2>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
-                            </h2>
-                            <i class="fas fa-quote-right"></i>
+                    <i class="next-banck mr-5 fas fa-chevron-left"></i>
+                        <div class="mr-5">
+                                <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
                         </div>
                         <div>
-                            <p class="nome-depoimento"><b>PAULA PEREIRA</b></p>
-                            <p class="nota-depoimento">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>&nbsp; <span>4.5</span>
-                            </p>
-                        </div>
-                    </div> 
+                            <div class="texto-depoimento">
+                                <i class="fas fa-quote-left"></i>
+                                    <h2>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
+                                    </h2>
+                                <i class="fas fa-quote-right"></i>
+                            </div>
+                            <div class="container-cliente">
+                                <p>PAULA PEREIRA</p>
+                                <p class="nota-depoimento">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                                </p>
+                            </div>
+                        </div> 
+                    <i class="next-banck ml-5 fas fa-chevron-right"></i>
                 </div>
-            <i class="fas fa-chevron-right"></i>
+            
         </div>
 
     </section>
 
-    <section id="plans" class="plans container-lg" style="width: 100%; height: 888px; background-image: url(./imgs/plans-bg.jpg); background-size: cover; background-repeat: no-repeat;">
+    <section id="plans" class="plans container-lg" style="width: 100%; height: 888px; background-image: url(./imgs/banne2.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
         <div class="title-plans container d-flex flex-column">
             <h2><b>Nossos Planos</b></h2>
             <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
         </div>
-       <div class="container-plans-bg container d-flex justify-content-center">
-            <div class="card-plans" style="width: 370px; height: 550px; background-image: url(./imgs/price-1.jpg); background-size: cover;">
+       <div class="container-plans-bg d-flex justify-content-center mx-auto">
+            <div class="card-plans" style="background-image: url(./imgs/price5.jfif); background-size: cover;">
                 <div class="container-plans">
                     <div>
                         <h4>Plano Básico</h4>
@@ -292,7 +293,7 @@
                 </div>
             </div>
 
-            <div class="card-plans" style="width: 370px; height: 550px;  background-image: url(./imgs/price-2.jpg); background-size: cover;">
+            <div class="card-plans" style="background-image: url(./imgs/price-2.jpg); background-size: cover;">
                 <div class="container-plans">
                     <div>
                         <h4>Plano Padrão</h4>
@@ -326,7 +327,7 @@
                 </div>
             </div>
 
-            <div class="card-plans p-5" style="width: 370px; height: 550px;  background-image: url(./imgs/price4.jpg); background-size: cover;">
+            <div class="card-plans p-5" style="background-image: url(./imgs/price4.jpg); background-size: cover;">
                 <div class="container-plans">
                     <div>
                         <h4>Plano Final</h4>
