adição do arquivo sliderjs

--- a/index.html
+++ b/index.html
@@ -217,37 +217,90 @@
         </div>
     </section>
     <section class="feedback-bg container-lg">
+
         <div class="d-flex justify-content-center align-items-center mx-auto mb-5">
             <h2>A Opinião dos Campeões: Feedback Direto dos Nossos Alunos sobre a Experiência na Academia! <i class="far fa-comment ml-1"></i></h2>
         </div>
 
-        <div class="container">
-                <div class="d-flex justify-content-center align-items-center mx-auto">
-                    <i class="next-banck mr-5 fas fa-chevron-left"></i>
-                        <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
+        <div class="container d-flex justify-content-center align-items-center">
+            <div id="voltar">
+                <i class="next-banck mr-5 fas fa-chevron-left" id="prev-button"></i>
+            </div>
+                <div class="slider">
+                    <div class="mr-5">
+                            <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
+                    </div>
+                    <div>
+                        <div class="texto-depoimento">
+                            <i class="fas fa-quote-left"></i>
+                                <h2>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
+                                </h2>
+                            <i class="fas fa-quote-right"></i>
                         </div>
-                        <div>
-                            <div class="texto-depoimento">
-                                <i class="fas fa-quote-left"></i>
-                                    <h2>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
-                                    </h2>
-                                <i class="fas fa-quote-right"></i>
-                            </div>
-                            <div class="container-cliente">
-                                <p>PAULA PEREIRA</p>
-                                <p class="nota-depoimento">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
-                                </p>
-                            </div>
-                        </div> 
-                    <i class="next-banck ml-5 fas fa-chevron-right"></i>
+                        <div class="container-cliente">
+                            <p>JULIANA TORRES</p>
+                            <p class="nota-depoimento">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                            </p>
+                        </div>
+                    </div>
                 </div>
+                <div class="slider">
+                    <div class="mr-5">
+                            <img src="./imgs/depoimentos/depoimento2.jpg" alt="">
+                    </div>
+                    <div>
+                        <div class="texto-depoimento">
+                            <i class="fas fa-quote-left"></i>
+                                <h2>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
+                                </h2>
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="container-cliente">
+                            <p>JESSICA GOMES</p>
+                            <p class="nota-depoimento">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="mr-5">
+                            <img src="./imgs/depoimentos/depoimento3.jpg" alt="">
+                    </div>
+                    <div>
+                        <div class="texto-depoimento">
+                            <i class="fas fa-quote-left"></i>
+                                <h2>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dignissimos.
+                                </h2>
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="container-cliente">
+                            <p>PAULA PEREIRA</p>
+                            <p class="nota-depoimento">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            <div id="avancar">
+                <i class="next-banck ml-5 fas fa-chevron-right" id="next-button"></i>
+            </div>
         </div>
     </section>
     <section class="calculadora-bg container-lg">
@@ -462,6 +515,7 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
-    <script type="text/javascript" src="./js/services.js"></script>
+    <script type="text/javascript" src="./js/slider-feedback.js"></script>
+    <script type="text/javascript" src="./js/calculadora.js"></script>
 </body>
 </html>
