--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
                 <h2>Cálcule seu IMC</h2>
                 <div class="divAltura">
                     <label for="altura">Altura (M)</label>
-                    <input type="number" id="altura" />
+                    <input type="number" id="altura" placeholder="Exemplo 1,75" oninput="validarInput(this)"/>
                 </div>
                 <div class="divPeso">
                     <label for="peso">Peso (KG)</label>
-                    <input type="number" id="peso" />
+                    <input type="number" id="peso" placeholder="Exemplo 75" oninput="validarInput(this)"/>
                 </div>
                 <div class="divCalc">
                     <button onclick="calcIMC()"><b>Calcular</b></button>
