adição de novas funcionalidades Js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3">  
+                        <button type="button" class="btn btn-dark col-4 p-3" id="enviarMensagem">  
                              Enviar Mensagem<i class="fab fa-whatsapp ml-2"></i>
                         </button>
                         
@@ -455,7 +455,7 @@
                     </h2>
                     <div class="mt-3">
                         <h5>Mensagem via whatsapp</h5>
-                        <button type="button" class="btn btn-success mt-1">
+                        <button type="button" class="btn btn-success mt-1" id="enviarMensagem">
                             Enviar<i class="fab fa-whatsapp ml-1"></i>
                         </button>
                     </div>
@@ -514,6 +514,8 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
+    <script type="text/javascript" src="./js/mensagem.js"></script>
+    <script type="text/javascript" src="./js/cards-instructor.js"></script>
     <script type="text/javascript" src="./js/slider-feedback.js"></script>
     <script type="text/javascript" src="./js/calculadora.js"></script>
 </body>
