--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
     </header>
     <section class="banner container-lg">
-        <div class="container-bg-banner container row m-auto">
-                <div class="col-2">
+        <div class="container-bg-banner container d-flex mx-auto">
+                <div>
                     <div class="text-banner">
                         <h1>
                             <b>
@@ -49,9 +49,12 @@
                         
                     </div>
                 </div>
-                <div class="image col-10">
-                    <img src="./imgs/banner/banner01.png" alt="">
+                <div class="image">
+                    <img class="slider-img" src="./imgs/banner/banner01.png" alt="">
+                    <img class="slider-img" src="./imgs/banner/banner02.png" alt="">
+                    <img class="slider-img" src="./imgs/banner/banner03.png" alt="">
                 </div>
+                
         </div>
     </section>
     <section class="numbers-animation-bg container-lg">
@@ -514,6 +517,7 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
+    <script type="text/javascript" src="./js/banner.js"></script>
     <script type="text/javascript" src="./js/mensagem.js"></script>
     <script type="text/javascript" src="./js/cards-instructor.js"></script>
     <script type="text/javascript" src="./js/slider-feedback.js"></script>
